# vsh

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: BuildArrow.cmake  BuildArrow.cmake.orig  BuildBenchmark.cmake  BuildDatasketches.cmake  BuildDatasketches.cmake.orig  BuildGtest.cmake  BuildGtest.cmake.orig  BuildIndicators.cmake  PrepareExternDir.cmake  Sanitizers.cmake  VshOptions.cmake
lib/: CMakeLists.txt
lib/driver/: CMakeLists.txt  indicator_hist_builder.hpp  indicators.hpp  main.cpp
lib/vsh/: CMakeLists.txt
lib/vsh/benchmarks/: eh_sketch_bench.cpp
lib/vsh/include/vsh/: bar_splitting_hist.hpp  consumer_node.hpp  eh_sketch.hpp  histogram.hpp  key_iterator.hpp  key_iterator_fwd.hpp  quantile_hist.hpp  vsh.hpp
lib/vsh/src/: bar_splitting_hist.cpp  eh_sketch.cpp  histogram.cpp  key_iterator.cpp  quantile_hist.cpp  vsh.cpp
lib/vsh/src/internal/: parquet_key_iterator.cpp  parquet_key_iterator.hpp
lib/vsh/tests/: bar_splitting_hist_test.cpp  eh_sketch_test.cpp  iterator_test.cpp
scripts/: generate_parquet.py
